fixed layout problems in article and avatar components

--- a/client/src/app/mNews/article/article.component.scss
+++ b/client/src/app/mNews/article/article.component.scss
@@ -25,7 +25,7 @@
 }
 
 .more-news {
-  background-color: map-get($elements-palette, BACKGROUND-GREEN);
+  //background-color: map-get($elements-palette, BACKGROUND-GREEN);
 
   h1 {
     padding: 1.5rem 0;
